Fixing compiler issues